{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 538,
  "lineage": "b3648b8d-2ac6-88a5-0b36-1f061647be4a",
  "resources": [
    {
      "module": "module.fabric_gw_subnet",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.64/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "cloudshellsubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.46.21.128/28",
            "address_prefixes": [
              "10.46.21.128/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/cloudshellsubnet",
            "name": "cloudshellsubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/private-cloudshell",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/default",
            "name": "default",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "mines-fabric-aci-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.192/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/mines-fabric-aci-snet",
            "name": "mines-fabric-aci-snet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-aci-snet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "mines-fabric-gw-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.176/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/mines-fabric-gw-snet",
            "name": "mines-fabric-gw-snet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-gw-snet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "mines-fabric-pe-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.48/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/mines-fabric-pe-snet",
            "name": "mines-fabric-pe-snet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-pe-snet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "relaysubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.46.21.144/28",
            "address_prefixes": [
              "10.46.21.144/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/relaysubnet",
            "name": "relaysubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/private-cloudshell-relay",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "snet-agw-dev-ca",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.32/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/snet-agw-dev-ca",
            "name": "snet-agw-dev-ca",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/mahyar-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-agw-mdp-dev-ca",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "storagesubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.46.21.160/28",
            "address_prefixes": [
              "10.46.21.160/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/storagesubnet",
            "name": "storagesubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/private-cloudshell-storage",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        }
      ]
    },
    {
      "module": "module.fabric_gw_subnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.46.21.0/24"
            ],
            "dns_servers": [
              "10.53.244.4"
            ],
            "guid": "2b7b169f-baa2-4c14-af2a-546bf70b25d6",
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke",
            "location": "canadacentral",
            "name": "ef74b0-dev-vwan-spoke",
            "resource_group_name": "ef74b0-dev-networking",
            "subnets": [
              "AzureBastionSubnet",
              "default",
              "relaysubnet",
              "storagesubnet",
              "cloudshellsubnet",
              "snet-agw-dev-ca",
              "mines-fabric-aci-snet",
              "mines-fabric-pe-snet",
              "mines-fabric-gw-snet"
            ],
            "tags": {
              "deployedBy": "azure-lz-vending-live"
            },
            "vnet_peerings": {
              "LZ-to-v1": "/subscriptions/be5c5c2b-d7e6-4940-ae15-37d7ef061283/resourceGroups/CLNPD1-ZCACN-RGP-EMLI-MDSreporting/providers/Microsoft.Network/virtualNetworks/vnet01",
              "RemoteVnetToHubPeering_248fea99-6c92-49fe-9f94-e804706a4074": "/subscriptions/e8d8ef98-c03d-4606-9854-e365453d88f3/resourceGroups/RG_bcgov-managed-lz-live-hub-canadacentral_a76c722f-6cc3-4220-aeaa-ed3824da42ff/providers/Microsoft.Network/virtualNetworks/HV_bcgov-managed-lz-liv_d3392fd0-0782-45c9-8989-87d98fbfcaef"
            },
            "vnet_peerings_addresses": [
              "10.53.240.0/20",
              "172.16.0.0/26"
            ]
          }
        }
      ]
    },
    {
      "module": "module.fabric_gw_subnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mines-fabric-gw-snet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-gw-snet-nsg",
            "location": "canadacentral",
            "name": "mines-fabric-gw-snet-nsg",
            "resource_group_name": "ef74b0-dev-networking",
            "security_rule": [
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application_environment": "dev",
              "client_code": "",
              "deployment_automation": "Terraform",
              "deployment_automation_version": "v0.1",
              "expense_authority": "",
              "information_security_classification": "protected_e",
              "ministry_name_prefix": "citz",
              "program_area": "permitting",
              "project_number": "",
              "responsibility_centre": "",
              "service_line": ""
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.fabric_gw_subnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mines-fabric-gw-snet-AllowFabricOutbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureCloud",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-gw-snet-nsg/securityRules/AllowFabricOutbound",
            "name": "AllowFabricOutbound",
            "network_security_group_name": "mines-fabric-gw-snet-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ef74b0-dev-networking",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric_gw_subnet.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.64/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "cloudshellsubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.46.21.128/28",
            "address_prefixes": [
              "10.46.21.128/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/cloudshellsubnet",
            "name": "cloudshellsubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/private-cloudshell",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/default",
            "name": "default",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "mines-fabric-aci-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.192/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/mines-fabric-aci-snet",
            "name": "mines-fabric-aci-snet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-aci-snet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "mines-fabric-gw-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.176/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/mines-fabric-gw-snet",
            "name": "mines-fabric-gw-snet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-gw-snet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "mines-fabric-pe-snet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.48/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/mines-fabric-pe-snet",
            "name": "mines-fabric-pe-snet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-pe-snet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "relaysubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.46.21.144/28",
            "address_prefixes": [
              "10.46.21.144/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/relaysubnet",
            "name": "relaysubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/private-cloudshell-relay",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "snet-agw-dev-ca",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.46.21.32/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/snet-agw-dev-ca",
            "name": "snet-agw-dev-ca",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/mahyar-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-agw-mdp-dev-ca",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        },
        {
          "index_key": "storagesubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.46.21.160/28",
            "address_prefixes": [
              "10.46.21.160/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke/subnets/storagesubnet",
            "name": "storagesubnet",
            "network_security_group_id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/private-cloudshell-storage",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ef74b0-dev-networking",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ef74b0-dev-vwan-spoke"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.46.21.0/24"
            ],
            "dns_servers": [
              "10.53.244.4"
            ],
            "guid": "2b7b169f-baa2-4c14-af2a-546bf70b25d6",
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/virtualNetworks/ef74b0-dev-vwan-spoke",
            "location": "canadacentral",
            "name": "ef74b0-dev-vwan-spoke",
            "resource_group_name": "ef74b0-dev-networking",
            "subnets": [
              "AzureBastionSubnet",
              "default",
              "relaysubnet",
              "storagesubnet",
              "cloudshellsubnet",
              "snet-agw-dev-ca",
              "mines-fabric-aci-snet",
              "mines-fabric-pe-snet",
              "mines-fabric-gw-snet"
            ],
            "tags": {
              "deployedBy": "azure-lz-vending-live"
            },
            "vnet_peerings": {
              "LZ-to-v1": "/subscriptions/be5c5c2b-d7e6-4940-ae15-37d7ef061283/resourceGroups/CLNPD1-ZCACN-RGP-EMLI-MDSreporting/providers/Microsoft.Network/virtualNetworks/vnet01",
              "RemoteVnetToHubPeering_248fea99-6c92-49fe-9f94-e804706a4074": "/subscriptions/e8d8ef98-c03d-4606-9854-e365453d88f3/resourceGroups/RG_bcgov-managed-lz-live-hub-canadacentral_a76c722f-6cc3-4220-aeaa-ed3824da42ff/providers/Microsoft.Network/virtualNetworks/HV_bcgov-managed-lz-liv_d3392fd0-0782-45c9-8989-87d98fbfcaef"
            },
            "vnet_peerings_addresses": [
              "10.53.240.0/20",
              "172.16.0.0/26"
            ]
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mines-fabric-aci-snet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-aci-snet-nsg",
            "location": "canadacentral",
            "name": "mines-fabric-aci-snet-nsg",
            "resource_group_name": "ef74b0-dev-networking",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application_environment": "dev",
              "client_code": "",
              "deployment_automation": "Terraform",
              "deployment_automation_version": "v0.1",
              "expense_authority": "",
              "information_security_classification": "protected_e",
              "ministry_name_prefix": "citz",
              "program_area": "permitting",
              "project_number": "",
              "responsibility_centre": "",
              "service_line": ""
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "mines-fabric-pe-snet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-pe-snet-nsg",
            "location": "canadacentral",
            "name": "mines-fabric-pe-snet-nsg",
            "resource_group_name": "ef74b0-dev-networking",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application_environment": "dev",
              "client_code": "",
              "deployment_automation": "Terraform",
              "deployment_automation_version": "v0.1",
              "expense_authority": "",
              "information_security_classification": "protected_e",
              "ministry_name_prefix": "citz",
              "program_area": "permitting",
              "project_number": "",
              "responsibility_centre": "",
              "service_line": ""
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mines-fabric-aci-snet-AllowACIExecInbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "19390",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-aci-snet-nsg/securityRules/AllowACIExecInbound",
            "name": "AllowACIExecInbound",
            "network_security_group_name": "mines-fabric-aci-snet-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ef74b0-dev-networking",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.azurerm_network_security_group.this"
          ]
        },
        {
          "index_key": "mines-fabric-aci-snet-AllowKeyVaultOutbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureKeyVault",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-aci-snet-nsg/securityRules/AllowKeyVaultOutbound",
            "name": "AllowKeyVaultOutbound",
            "network_security_group_name": "mines-fabric-aci-snet-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ef74b0-dev-networking",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.azurerm_network_security_group.this"
          ]
        },
        {
          "index_key": "mines-fabric-aci-snet-AllowVSCodeTunnelOutbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/53205a1b-0f8d-459e-a424-65f1b39ec648/resourceGroups/ef74b0-dev-networking/providers/Microsoft.Network/networkSecurityGroups/mines-fabric-aci-snet-nsg/securityRules/AllowVSCodeTunnelOutbound",
            "name": "AllowVSCodeTunnelOutbound",
            "network_security_group_name": "mines-fabric-aci-snet-nsg",
            "priority": 210,
            "protocol": "Tcp",
            "resource_group_name": "ef74b0-dev-networking",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.azurerm_network_security_group.this"
          ]
        }
      ]
    }
  ]
}